...
  "all_time": "All Time",
  "custom_date_range": "Custom Date Range",
  "all_types_earning": "All Types Earning",
  "result_found": "Result Found",
  "vat_tax_inc": "(Vat/Tax Incl.)",
  "or": "or",
  "log_in": "Log In",
  "phone_number": "Phone Number",
  "registration_successful": "Your registration request has been\nsent successfully !",
  "registration_successful_message": "Registration request need to reviewed by Admin.\nBe patient to get the feedback. Otherwise you\ncan contact with admin.",
  "back_to_login_page": "Back to Login Page",
  "basic_information": "Basic Information",
  "enter_email": "Enter Email",
...
